--- a/forgotPassword.html
+++ b/forgotPassword.html
@@ -23,7 +23,7 @@
      
       <h4 id="fPassword" class="my-3 "></h4>
     
-      <a href="/" class="absolute top-4 left-4 text-sm shadow px-2 text-[#8561f4] rounded py-1 hover:text-white font-semibold hover:bg-[#8561f4] transition-colors duration-200 ease-in-out blurEffect" id="homeBtn"><i class="fa-solid fa-house text-lg"></i></a>
+      <a href="index.html" class="absolute top-4 left-4 text-sm shadow px-2 text-[#8561f4] rounded py-1 hover:text-white font-semibold hover:bg-[#8561f4] transition-colors duration-200 ease-in-out blurEffect" id="homeBtn"><i class="fa-solid fa-house text-lg"></i></a>
       <script src="forgotPassword.js"></script>
 </body>
 </html>
