--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <input class="formInputStyle" type="text" placeholder="EmployeeID" />
         <input class="formInputStyle" type="password" placeholder="Password" />
         <input class="btnStyle" type="submit" value="Sign Up" />
-        <a href="/" class="text-sm hover:underline hover:text-[#4C3594]">Already have an Account</a>
+        <a href="index.html" class="text-sm hover:underline hover:text-[#4C3594]">Already have an Account</a>
       </form>
     </div>
   </div>
